# winqos-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  winqos.example.json
.github/workflows/: build-package.yml
.omc/ultragoal/: brief.md  goals.json  ledger.jsonl
docs/: ARCHITECTURE.md  ROADMAP.md
src/: adapter.rs  autopilot.rs  backend.rs  classifier.rs  cli.rs  collector.rs  config.rs  daemon.rs  feedback.rs  lab.rs  learning.rs  lib.rs  main.rs  model.rs  petscii.rs  policy.rs  profile.rs  receipt.rs  runner.rs  runtime.rs  security_paths.rs  signal.rs
src/backend/: dscp.rs  routerqosd.rs  windivert_lab.rs
