[package]
name = "winqos-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
